Fix pre tag overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -65,6 +65,10 @@ video {
     }
 }
 
+pre {
+    white-space: pre-wrap;
+}
+
 button,
 html input[type="button"],
 input[type="reset"],
